Link to Project 2 added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>That's my test page</h1>
   <ul>
     <li><a href="https://rusaldo.github.io/Cuda/" target="_blank">Project 1</a></li>
-    <li><a href="#">Project 2</a></li>
+    <li><a href="https://rusaldo.github.io/Luna/" target="_blank">Project 2</a></li>
     <li><a href="#">Project 3</a></li>
     <li><a href="#">Project 4</a></li>
     <li><a href="#">Project 5</a></li>
