--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <li><a href="https://rusaldo.github.io/Cuda/" target="_blank">Project 1</a></li>
     <li><a href="https://rusaldo.github.io/Luna/" target="_blank">Project 2</a></li>
     <li><a href="https://rusaldo.github.io/Snow/" target="_blank">Project 3</a></li>
-    <li><a href="#">Project 4</a></li>
+    <li><a href="https://rusaldo.github.io/Zet/" target="_blank">Project 4</a></li>
     <li><a href="#">Project 5</a></li>
   </ul>
 </body>
