--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
         <h3 class="projects__heading section-heading">Работы</h3>
         <ul class="projects__list">
           <li class="projects__item">
-            <a class="projects__link" href="#">Snow</a>
+            <a class="projects__link" href="https://rusaldo.github.io/Snow/" target="_blank">Snow</a>
           </li>
           <li class="projects__item">
-            <a class="projects__link" href="#">Luna</a>
+            <a class="projects__link" href="https://rusaldo.github.io/Luna/" target="_blank">Luna</a>
           </li>
           <li class="projects__item">
-            <a class="projects__link" href="#">Cuda</a>
+            <a class="projects__link" href="https://rusaldo.github.io/Cuda/" target="_blank">Cuda</a>
           </li>
           <li class="projects__item">
-            <a class="projects__link" href="#">Zet</a>
+            <a class="projects__link" href="https://rusaldo.github.io/Zet/" target="_blank">Zet</a>
           </li>
           <li class="projects__item">
-            <a class="projects__link" href="#">Nutrition</a>
+            <a class="projects__link" href="https://rusaldo.github.io/Nutrition/" target="_blank">Nutrition</a>
           </li>
         </ul>
       </article>
@@ -39,10 +39,10 @@
         <h3 class="links__heading section-heading">Ссылки</h3>
         <ul class="links__list">
           <li class="links__item">
-            <a class="links__link" href="#">GitHub</a>
+            <a class="links__link" href="https://github.com/Rusaldo" target="_blank">GitHub</a>
           </li>
           <li class="links__item">
-            <a class="links__link" href="#">CodePen</a>
+            <a class="links__link" href="https://codepen.io/Martinsh/" target="_blank">CodePen</a>
           </li>
         </ul>
       </article>
