--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 </head>
 <body>
   <header class="header">
-    <h1 class="page-heading">Мое портфолио</h1>
+    <h1 class="page-heading">
+      <span>M</span>
+      <span>A</span>
+      <span>R</span>
+      <span>T</span>
+      <span>I</span>
+      <span>N</span>
+    </h1>
   </header>
   <main class="main">
     <div class="wrapper">
