--- a/index.html
+++ b/index.html
@@ -10,86 +10,89 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <header class="header">
-    <h1 class="page-heading">
-      <span>M</span>
-      <span>A</span>
-      <span>R</span>
-      <span>T</span>
-      <span>I</span>
-      <span>N</span>
-    </h1>
-  </header>
-  <main class="main">
-    <div class="wrapper">
-      <article class="projects">
-        <h3 class="projects__heading section-heading">Работы</h3>
-        <ul class="projects__list">
-          <li class="projects__item">
-            <a class="projects__link" href="https://rusaldo.github.io/Snow/" target="_blank">Snow</a>
-          </li>
-          <li class="projects__item">
-            <a class="projects__link" href="https://rusaldo.github.io/Luna/" target="_blank">Luna</a>
-          </li>
-          <li class="projects__item">
-            <a class="projects__link" href="https://rusaldo.github.io/Cuda/" target="_blank">Cuda</a>
-          </li>
-          <li class="projects__item">
-            <a class="projects__link" href="https://rusaldo.github.io/Zet/" target="_blank">Zet</a>
-          </li>
-          <li class="projects__item">
-            <a class="projects__link" href="https://rusaldo.github.io/Nutrition/" target="_blank">Nutrition</a>
-          </li>
-        </ul>
-      </article>
-      <article class="links">
-        <h3 class="links__heading section-heading">Ссылки</h3>
-        <ul class="links__list">
-          <li class="links__item">
-            <a class="links__link" href="https://github.com/Rusaldo" target="_blank">GitHub</a>
-          </li>
-          <li class="links__item">
-            <a class="links__link" href="https://codepen.io/Martinsh/" target="_blank">CodePen</a>
-          </li>
-        </ul>
-      </article>
-      <article class="skills">
-        <h3 class="skills__heading section-heading">Навыки</h3>
-        <ul class="skills__list">
-          <li class="skills__item">HTML</li>
-          <li class="skills__item">CSS</li>
-          <li class="skills__item">SASS</li>
-          <li class="skills__item">Javascript</li>
-          <li class="skills__item">JQuery</li>
-          <li class="skills__item">БЭМ</li>
-          <li class="skills__item">Photoshop</li>
-          <li class="skills__item">Avocode</li>
-          <li class="skills__item">SQL</li>
-        </ul>
-      </article>
-    </div>
-  </main>
-  <footer class="footer">
-    <address class="contacts">
-      <h3 class="contacts__heading section-heading">Контакты</h3>
-      <p class="contacts__name">
-        <i class="fas fa-user-secret"></i> Руслан Яндиев
-      </p>
-      <p class="contacts__email">
-        <a class="email__link" href="mailto:yandiev_97@mail.ru">
-          <i class="fas fa-envelope-square email__icon"></i> Yandiev_97@mail.ru
-        </a>
-      </p>
-      <p class="contacts__tel">
-        <a class="tel__link" href="tel:+79253292121">
-          <i class="fas fa-phone-square tel__icon"></i> +79253292121
-        </a>
-      </p>
-      <p class="contacts__address">
-        <i class="fas fa-map-marker-alt address__icon"></i> г. Москва, <br> метро Севастопольская
-      </p>
-    </address>
-  </footer>
+  <div class="container">
+    <header class="header">
+      <h1 class="page-heading">
+        <span>M</span>
+        <span>A</span>
+        <span>R</span>
+        <span>T</span>
+        <span>I</span>
+        <span>N</span>
+      </h1>
+    </header>
+    <main class="main">
+      <div class="wrapper">
+        <article class="projects">
+          <h3 class="projects__heading section-heading">Работы</h3>
+          <ul class="projects__list">
+            <li class="projects__item">
+              <a class="projects__link" href="https://rusaldo.github.io/Snow/" target="_blank">Snow</a>
+            </li>
+            <li class="projects__item">
+              <a class="projects__link" href="https://rusaldo.github.io/Luna/" target="_blank">Luna</a>
+            </li>
+            <li class="projects__item">
+              <a class="projects__link" href="https://rusaldo.github.io/Cuda/" target="_blank">Cuda</a>
+            </li>
+            <li class="projects__item">
+              <a class="projects__link" href="https://rusaldo.github.io/Zet/" target="_blank">Zet</a>
+            </li>
+            <li class="projects__item">
+              <a class="projects__link" href="https://rusaldo.github.io/Nutrition/" target="_blank">Nutrition</a>
+            </li>
+          </ul>
+        </article>
+        <article class="links">
+          <h3 class="links__heading section-heading">Ссылки</h3>
+          <ul class="links__list">
+            <li class="links__item">
+              <a class="links__link" href="https://github.com/Rusaldo" target="_blank">GitHub</a>
+            </li>
+            <li class="links__item">
+              <a class="links__link" href="https://codepen.io/Martinsh/" target="_blank">CodePen</a>
+            </li>
+          </ul>
+        </article>
+        <article class="skills">
+          <h3 class="skills__heading section-heading">Навыки</h3>
+          <ul class="skills__list">
+            <li class="skills__item">HTML</li>
+            <li class="skills__item">CSS</li>
+            <li class="skills__item">SASS</li>
+            <li class="skills__item">Javascript</li>
+            <li class="skills__item">JQuery</li>
+            <li class="skills__item">БЭМ</li>
+            <li class="skills__item">Photoshop</li>
+            <li class="skills__item">Avocode</li>
+            <li class="skills__item">SQL</li>
+          </ul>
+        </article>
+      </div>
+    </main>
+    <footer class="footer">
+      <address class="contacts">
+        <h3 class="contacts__heading section-heading">Контакты</h3>
+        <p class="contacts__name">
+          <i class="fas fa-user-secret"></i> Руслан Яндиев
+        </p>
+        <p class="contacts__email">
+          <a class="email__link" href="mailto:yandiev_97@mail.ru">
+            <i class="fas fa-envelope-square email__icon"></i> Yandiev_97@mail.ru
+          </a>
+        </p>
+        <p class="contacts__tel">
+          <a class="tel__link" href="tel:+79253292121">
+            <i class="fas fa-phone-square tel__icon"></i> +79253292121
+          </a>
+        </p>
+        <p class="contacts__address">
+          <i class="fas fa-map-marker-alt address__icon"></i> г. Москва, <br> метро Севастопольская
+        </p>
+      </address>
+    </footer>
+  </div>
+  
   <!-----JAVACRIPT---->
   <script>src="index.js"</script>
 </body>
