--- a/index.html
+++ b/index.html
@@ -4,42 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Yandiev</title>
-  <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,400i,700,700i" rel="stylesheet">
-  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-  <link rel="stylesheet" href="main.css">
+  <title>Яндиев</title>
 </head>
 <body>
   <div class="container">
-    <header class="header">
-      <h1 class="page-heading">
-        <span>M</span>
-        <span>A</span>
-        <span>R</span>
-        <span>T</span>
-        <span>I</span>
-        <span>N</span>
-      </h1>
-    </header>
     <main class="main">
       <div class="wrapper">
         <article class="projects">
           <h3 class="projects__heading section-heading">Работы</h3>
           <ul class="projects__list">
             <li class="projects__item">
-              <a class="projects__link" href="https://rusaldo.github.io/Snow/" target="_blank">Snow</a>
+              <a class="projects__link" href="rusaldo.github.io/Snow" target="_blank">Snow</a>
             </li>
             <li class="projects__item">
-              <a class="projects__link" href="https://rusaldo.github.io/Luna/" target="_blank">Luna</a>
+              <a class="projects__link" href="rusaldo.github.io/Luna" target="_blank">Luna</a>
             </li>
             <li class="projects__item">
-              <a class="projects__link" href="https://rusaldo.github.io/Cuda/" target="_blank">Cuda</a>
+              <a class="projects__link" href="rusaldo.github.io/Cuda" target="_blank">Cuda</a>
             </li>
             <li class="projects__item">
-              <a class="projects__link" href="https://rusaldo.github.io/Zet/" target="_blank">Zet</a>
+              <a class="projects__link" href="rusaldo.github.io/Zet" target="_blank">Zet</a>
             </li>
             <li class="projects__item">
-              <a class="projects__link" href="https://rusaldo.github.io/Nutrition/" target="_blank">Nutrition</a>
+              <a class="projects__link" href="rusaldo.github.io/Forest" target="_blank">Forest</a>
+            </li>
+            <li class="projects__item">
+              <a class="projects__link" href="rusaldo.github.io/Nutrition" target="_blank">Nutrition</a>
             </li>
           </ul>
         </article>
@@ -50,7 +40,7 @@
               <a class="links__link" href="https://github.com/Rusaldo" target="_blank">GitHub</a>
             </li>
             <li class="links__item">
-              <a class="links__link" href="https://codepen.io/Martinsh/" target="_blank">CodePen</a>
+              <a class="links__link" href="https://codepen.io/Martinsh" target="_blank">CodePen</a>
             </li>
           </ul>
         </article>
@@ -74,26 +64,23 @@
       <address class="contacts">
         <h3 class="contacts__heading section-heading">Контакты</h3>
         <p class="contacts__name">
-          <i class="fas fa-user-secret"></i> Руслан Яндиев
+          Руслан Яндиев
         </p>
         <p class="contacts__email">
           <a class="email__link" href="mailto:yandiev_97@mail.ru">
-            <i class="fas fa-envelope-square email__icon"></i> Yandiev_97@mail.ru
+            Yandiev_97@mail.ru
           </a>
         </p>
         <p class="contacts__tel">
           <a class="tel__link" href="tel:+79253292121">
-            <i class="fas fa-phone-square tel__icon"></i> +79253292121
+            +79253292121
           </a>
         </p>
         <p class="contacts__address">
-          <i class="fas fa-map-marker-alt address__icon"></i> г. Москва, <br> метро Севастопольская
+          г. Москва, <br> метро Севастопольская
         </p>
       </address>
     </footer>
   </div>
-  
-  <!-----JAVACRIPT---->
-  <script>src="index.js"</script>
 </body>
 </html>
