--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
           <h3 class="projects__heading section-heading">Работы</h3>
           <ul class="projects__list">
             <li class="projects__item">
-              <a class="projects__link" href="rusaldo.github.io/Snow" target="_blank">Snow</a>
+              <a class="projects__link" href="https://rusaldo.github.io/Snow" target="_blank">Snow</a>
             </li>
             <li class="projects__item">
-              <a class="projects__link" href="rusaldo.github.io/Luna" target="_blank">Luna</a>
+              <a class="projects__link" href="https://rusaldo.github.io/Luna" target="_blank">Luna</a>
             </li>
             <li class="projects__item">
-              <a class="projects__link" href="rusaldo.github.io/Cuda" target="_blank">Cuda</a>
+              <a class="projects__link" href="https://rusaldo.github.io/Cuda" target="_blank">Cuda</a>
             </li>
             <li class="projects__item">
-              <a class="projects__link" href="rusaldo.github.io/Zet" target="_blank">Zet</a>
+              <a class="projects__link" href="https://rusaldo.github.io/Zet" target="_blank">Zet</a>
             </li>
             <li class="projects__item">
-              <a class="projects__link" href="rusaldo.github.io/Forest" target="_blank">Forest</a>
+              <a class="projects__link" href="https://rusaldo.github.io/Forest" target="_blank">Forest</a>
             </li>
             <li class="projects__item">
-              <a class="projects__link" href="rusaldo.github.io/Nutrition" target="_blank">Nutrition</a>
+              <a class="projects__link" href="https://rusaldo.github.io/Nutrition" target="_blank">Nutrition</a>
             </li>
           </ul>
         </article>
