--- a/index.html
+++ b/index.html
@@ -49,13 +49,14 @@
           <ul class="skills__list">
             <li class="skills__item">HTML</li>
             <li class="skills__item">CSS</li>
+            <li class="skills__item">JS</li>
             <li class="skills__item">SASS</li>
-            <li class="skills__item">Javascript</li>
-            <li class="skills__item">JQuery</li>
-            <li class="skills__item">БЭМ</li>
+            <li class="skills__item">JQuery</li>            
+            <li class="skills__item">Gulp</li>
+            <li class="skills__item">Vue.js</li>
+            <li class="skills__item">БЭМ</li>            
+            <li class="skills__item">Git</li>
             <li class="skills__item">Photoshop</li>
-            <li class="skills__item">Avocode</li>
-            <li class="skills__item">SQL</li>
           </ul>
         </article>
       </div>
